fix(webapp): remove html style and padding on body on mobile

--- a/apps/webapp/src/styles/globals.css
+++ b/apps/webapp/src/styles/globals.css
@@ -7,10 +7,6 @@ button {
   cursor: none;
 }
 
-html {
-  background-color: #1a1a1a;
-}
-
 body {
   min-height: 100vh;
 }
